Fixed spacing of utility icons in cards

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ body {
 .grid {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    /* grid-template-rows: 1fr 5fr; */
 }
 
 .sidebar {
@@ -75,13 +74,6 @@ body {
 
 }
 
-.navbar {
-    /* flex-basis: 20rem; */
-}
-
-/* .welcome {
-    flex-shrink: 0;
-} */
 #search-bar {
     width: clamp(300px, 50%, 1000px);
     height:1.5rem;
@@ -103,7 +95,6 @@ body {
     display: flex;
     flex-direction: row;
     margin-left: auto;
-    /* margin-left: clamp(50px, 30vh, 800px); */
     gap: 1rem;
 }
 
@@ -147,6 +138,7 @@ body {
     border-radius: 10px;
     border-left: 10px solid #facc15;
     align-items: flex-start;
+    overflow: scroll;
 }
 
 
@@ -166,13 +158,17 @@ body {
     font-size: 0.90rem;
 }
 
+.ann-text > h5 {
+    margin-bottom: 0.2rem;
+}
+
 .card-icons {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: end;
     width: 95%;
-    height: 40%;
+    margin-top: 0.2rem;
     gap: 1rem;
 }
 
